Improve dark mode in Search (Resolves: #211)

--- a/Naver Dark.verbose.user.css
+++ b/Naver Dark.verbose.user.css
@@ -2,7 +2,7 @@
 @name			Naver Dark
 @author			OrigamiDream
 @description	Dark mode for NAVER
-@version		1.64.55
+@version		1.64.56
 @namespace		Avis Studio
 @license		CC BY-NC-SA
 @preprocessor	default
@@ -64108,11 +64108,12 @@
 	.cs_common_module .cm_content_wrap:before {
 		position: absolute;
 		content: '';
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
+		left: -1px;
+		top: 0px;
+		width: calc(100% + 2px);
+		height: calc(100% + 1px);
 		background: rgba(0, 0, 0, 0.75);
+		border-radius: 0 0 6px 6px;
 		pointer-events: none;
 	}
 	
@@ -87096,6 +87097,31 @@
 	.sp_intent_comment .user_box .info_group .info2 .badge_loc, .sp_intent_comment .intent_title_area .intent_title_sub .btn_join .txt {
 		border: 1px solid #688cda;
 		color: #688cda;
+	}
+	
+	.sp_trend .trend_list .trend_link {
+		border: 1px solid #404040;
+	}
+	
+	.sp_trend .trend_list .trend_link:hover {
+		border-color: #4f4f4f;
+	}
+	
+	.sp_trend .trend_list .trend_link .keyword_area {
+		color: #cacaca;
+	}
+	
+	.sp_trend .trend_list_wrap .btn_area:after {
+		background-image: -webkit-gradient(linear,left top,right top,from(rgba(47,47,47,0)),color-stop(38%,#2f2f2f));
+		background-image: linear-gradient(to right,rgba(47,47,47,0),#2f2f2f 38%);
+	}
+	
+	.cs_common_module .league_schedule .match_content .match_area .box .match_btn.type_black {
+		color: #cacaca !important;
+	}
+	
+	.cs_common_module .rank_table_area.type_worldcup+.league_schedule.type_sports ~ .detail_info ~ .notice_link.type_noborder {
+		border-top: 1px solid #404040;
 	}
 }
 
